# vezir

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/logo/: README.md
data/: team.json.example
infra/systemd/: README.md  vezir.service
tests/: test_auth.py  test_config.py  test_e2e.sh  test_enroll.py  test_meet_runner.py  test_permissions.py  test_queue.py  test_uploads.py
vezir/: __init__.py  cli.py  config.py
vezir/client/: gui.py  scribe.py  uploader.py
vezir/server/: app.py  auth.py  enroll.py  labels.py  login.py  meet_runner.py  queue.py  sessions.py  templating.py  uploads.py  voiceprints.py  worker.py
vezir/web/static/: style.css
vezir/web/templates/: base.html  dashboard.html  enroll.html  label.html  label_pending.html  login.html  session.html
