[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vezir"
version = "0.1.2"
description = "Internal scribe service that wraps meetscribe for team-scale meeting capture, transcription, summarization, and speaker labeling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Blink"}]
keywords = [
    "meeting",
    "transcription",
    "scribe",
    "team",
    "self-hosted",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]
dependencies = [
    # Client-side base. Includes meetscribe-record for `vezir scribe`'s
    # capture wrapper. Does NOT pull in transcription / diarization /
    # summarization deps; those land via `pip install vezir[server]`.
    "click>=8.0",
    "httpx>=0.27",
    "ulid-py>=1.1",
    "meetscribe-record>=0.1.0",
]

[project.scripts]
vezir = "vezir.cli:main"

[project.urls]
Homepage = "https://github.com/pretyflaco/vezir"
Repository = "https://github.com/pretyflaco/vezir"
Issues = "https://github.com/pretyflaco/vezir/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vezir*"]

[tool.setuptools.package-data]
vezir = ["web/templates/*.html", "web/static/*"]

[project.optional-dependencies]
# Server side: full FastAPI app + worker that shells out to meetscribe-offline
# (transcribe, label, sync). Install on the GPU box that runs `vezir serve`.
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "meetscribe-offline>=0.5.0",
    # Pure-Python QR generation (~76 KB) for the device enrollment page.
    # See vezir/server/enroll.py.
    "segno>=1.5",
]
# GUI scribe widget (Tkinter). Tkinter ships with Python on most distros
# but some (Debian/Ubuntu minimal) require `apt install python3-tk`.
# No new pip deps needed.
gui = []
dev = ["ruff", "pytest", "pytest-asyncio"]
